--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -5,7 +5,7 @@ layout: default
 <b>Recent Posts</b>
 <ul>
   {% for post in site.posts %}
-    <li><a href="{{post.url}}">{{post.title}}</a></li>
+    <li><a href="/blogticle{{post.url}}">{{post.title}}</a></li>
   {% endfor %}
 </ul>
 
